--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@ Flask service
 
 {% block body %}
 <div class="container">
-    <form method="post" action="http://127.0.0.1:5000">
+    <form method="post" action="/">
         <input type="text" name="amount" id="amount"><br>
         <select name="currency" id="currency">
             <option value={{ CURRENCY_EUR }}>Евро</option>
